...
    <string name="search_icon_content_description">Search</string>
    <string name="filter_hint_filter_my_lists_and_articles">Filter my collections</string>
    <string name="nav_item_suggested_edits">Edits</string>
    <string name="nav_item_activity">Activity</string>
    <string name="nav_item_more">More</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_item_contribute">Contribute</string>
...
    <string name="image_content_description">Image: %s</string>
    <string name="page_content_description">Page: %s</string>
    <string name="wikimedia_commons">Wikimedia Commons</string>
    <string name="wikidata">Wikidata</string>

    <!-- Saved pages -->
...
    <string name="page_edit_history_comment_placeholder">Empty edit summary</string>
    <string name="page_edit_history_search_or_filter_edits_hint">Search or filter edits</string>
    <string name="page_edit_history_filter_by">Filter by</string>
    <string name="page_edit_history_filter_by_all">All edits (%s)</string>
    <string name="page_edit_history_filter_by_user">User edits (%s)</string>
...
    <string name="reset_password_hint">New password</string>
    <string name="reset_password_button">Save and log in</string>
    <string name="preference_title_logout">Log out</string>
    <string name="toast_logout_complete">Logged out</string>
    <string name="logout_prompt">This will log you out on all devices where you are currently logged in. Do you want to continue?</string>
...
    <string name="settings_item_preferences">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="about_description">About the Wikipedia app</string>
    <string name="privacy_policy_description">Privacy policy</string>
    <string name="terms_of_use_description">Terms of use</string>
...
    <string name="alpha_update_notification_text">Tap to download</string>
    <string name="dialog_close_description">Close</string>
    <string name="preference_title_show_images">Show images</string>
    <string name="preference_summary_show_images">Enable or disable loading of images in pages. Uncheck this setting if your Internet connection is slow, or if your data plan is limited.</string>
    <string name="preference_title_download_only_over_wifi">Download only over Wi-Fi</string>
...
    <string name="temp_account_not_logged_in">You are not logged in</string>
    <string name="temp_account_anon_ip_dialog_body"><![CDATA[Once you make an edit, your IP address will be associated with your edits.<br /><br /><a href="https://#login">Log in</a> or <a href="https://#createaccount">create an account</a> to get credit for future edits and to access other features.]]></string>
    <string name="temp_account_anon_dialog_body"><![CDATA[Once you make an edit, a <b>temporary account</b> will be created for you to protect your privacy. <a href="%1$s">Learn more</a>.<br /><br /><a href="https://#login">Log in</a> or <a href="https://#createaccount">create an account</a> to get credit for future edits and to access other features.]]></string>
    <string name="temp_account_temp_dialog_body"><![CDATA[Your edit will be attributed to %1$s. Your IP address will be visible to administrators.<br /><br />If you <a href="https://#login">log in</a> or <a href="https://#createaccount">create an account</a>, your edits will be attributed to a name you choose, among other benefits.]]></string>
    <string name="temp_account_dialog_ok">Got it</string>
    <string name="temp_account_using_title">You are using a temporary account</string>
    <string name="temp_account_dialog_discard">Discard changes and log in</string>
...
    <!-- Description editing -->
    <string name="description_edit_text_hint">Article description</string>
    <string name="description_edit_article_description_label">Article</string>
    <string name="description_edit_translate_article_description_label_per_language">Article description (%s)</string>
    <string name="description_edit_translate_article_description_hint_per_language">Article description (%s)</string>
...
    <string name="suggested_edits_edit_patrol_review">Review</string>
    <string name="suggested_edits_review_description">Review article description</string>
    <string name="suggested_edits_add_description_button">Add description</string>
    <string name="suggested_edits_edit_description_button">Edit description</string>
    <string name="suggested_edits_add_translation_button">Add translation</string>
    <string name="suggested_edits_edit_translation_button">Edit translation</string>
    <string name="suggested_edits_add_caption_button">Add caption</string>
    <string name="suggested_edits_edit_caption_button">Edit caption</string>
    <string name="suggested_edits_review_image_caption">Review image caption</string>
    <string name="suggested_edits_my_contributions">My contributions</string>
    <string name="suggested_edits_no_description">This file does not have a description</string>
    <string name="suggested_edits_license_notice"><![CDATA[By adding the description, I agree to the <a href="%1$s">Terms of Use</a> and to irrevocably release my contributions under the <a href="%2$s">Creative Commons CC0</a> license.]]></string>
...
    <string name="suggested_edits_feed_card_add_description_button">Add article description</string>
    <string name="suggested_edits_feed_card_add_translation_in_language_button">Add article description (%s)</string>
    <string name="suggested_edits_tasks_onboarding_get_started">Get started</string>
    <string name="suggested_edits_image_preview_dialog_caption_in_language_title">Image caption (%s)</string>
    <string name="suggested_edits_image_preview_dialog_image">Image</string>
...
    <string name="suggested_edits_feed_card_add_image_tags">Add image tags</string>
    <string name="suggested_edits_task_action_text_add">Add</string>
    <string name="suggested_edits_task_action_text_translate">Translate</string>
    <string name="suggested_edits_image_captions">Image captions</string>
    <string name="suggested_edits_image_tags">Image tags</string>
...
    <string name="suggested_edits_image_tags_select_title">You haven\'t selected any tags for this image</string>
    <string name="suggested_edits_image_tags_select_text">Only tags that you choose will be added to images. Tags that are not selected will be marked as rejected. Are you sure you want to mark all tags as rejected?</string>
    <string name="suggested_edits_image_tags_add_tag">Add tag</string>
    <string name="suggested_edits_image_tags_exit_dialog_message">The unpublished tags will not be saved</string>
    <string name="suggested_edits_image_zoom_tooltip">Pinch to zoom this image.</string>
...
        <item quantity="other">%d days</item>
    </plurals>
    <string name="suggested_edits_what_is_title">What is Suggested edits?</string>
    <string name="suggested_edits_what_is_text">Suggested edits presents opportunities for small but vital contributions to Wikipedia.</string>
    <string name="suggested_edits_learn_more">Learn more</string>
...
    <string name="custom_date_picker_dialog_cancel_button_text">Cancel</string>

    <string name="talk_title">Talk</string>
    <string name="talk_user_title">Talk: %s</string>
    <string name="talk_new_topic">New topic</string>
...
