<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tasksContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <org.wikipedia.views.WikiCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:id="@+id/learnMoreCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/whatIsTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suggested_edits_what_is_title"
                android:textColor="?attr/primary_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/whatIsBodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/suggested_edits_what_is_text"
                android:textColor="?attr/secondary_color"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/learnMoreButton"
                style="@style/App.Button.Secondary"
                app:icon="@drawable/ic_open_in_new_black_24px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/suggested_edits_learn_more" />

        </LinearLayout>

    </org.wikipedia.views.WikiCardView>

    <!-- TODO: remove. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/showIPBlockedMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="IPBlocked"
            android:textColor="?attr/progressive_color"
            android:textSize="@dimen/bottom_nav_label_text_size" />

        <TextView
            android:id="@+id/showOnboardingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Onboarding"
            android:textColor="?attr/progressive_color"
            android:textSize="@dimen/bottom_nav_label_text_size" />
    </LinearLayout>
</LinearLayout>