...
        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/suggestedEditsCardsCoordinator"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/bottomButtonContainer"
            app:layout_constraintTop_toBottomOf="@id/wikiLanguageDropdownContainer">
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/cardsViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_chevron_forward_white_24dp"
                app:tint="?attr/progressive_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addContributionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggested_edits_add_description_button"
                android:tag="portrait"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
